# SparkLabs

./: CMakeLists.txt  README.md  README_CN.md  main.cpp
core/: CMakeLists.txt  Map.h  Variant.cpp  Variant.h
core/io/: Vector.h
core/string/: String.h
docs/: AI_SYSTEM.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md
engine/: CMakeLists.txt  Engine.cpp
engine/resource/: Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceLoader.cpp  ResourceLoader.h
engine/scene/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
frontend/: README.md  package.json
frontend/src/: index.css
frontend/src/components/: StoryEditor.tsx  StoryboardEditor.tsx  VideoRenderer.tsx
render/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderContext.cpp  RenderContext.h  RenderDevice.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
render/gpu/: CMakeLists.txt
scripts/: CMakeLists.txt
scripts/bindings/: PyBindings.cpp  PyBindings.h
scripts/python/: __init__.py  ai_workflow_examples.py  example_game.py  game_loop.py  scene_examples.py
sparkai/: CMakeLists.txt
sparkai/asset/: AssetGenerator.cpp
sparkai/audio/: VoiceSynthesis.cpp
sparkai/narrative/: StoryParser.cpp  StoryParser.h
sparkai/storyboard/: Storyboard.cpp
sparkai/team/: QualityGate.cpp  QualityGate.h  TeamAgent.cpp  TeamAgent.h  TeamSpecialist.cpp  TeamSpecialist.h
sparkai/video/: VideoCompositor.cpp
sparkai/workflow/: WorkflowFactory.cpp
sparkai/workflow/nodes/: AIGenerationNodes.cpp  AIGenerationNodes.h
tests/: CMakeLists.txt
